--- a/index.html
+++ b/index.html
@@ -5,7 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/css/reset.css" />
     <link rel="stylesheet" href="dist/css/styles.css" />
-    <title>(S)CSS Masterclass</title>
+    <title>Canal coding</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>
+        Canal Street Market is a carefully curated retail market, food hall &
+        community space open year-round at 265 Canal Street.
+      </h1>
+      <div class="header__photo"></div>
+    </header>
+    <main>
+      <section class="about">
+        <h2>A New Kind of Market</h2>
+        <div class="about__columns">
+          <div class="about__column">
+            <div class="img__wrapper">
+              <img src="https://source.unsplash.com/random/10" />
+            </div>
+            <span
+              >Merging retail, food, art, and culture, Canal Street Market
+              highlights top retail and design concepts, restaurants, and
+              up-and-coming players in the downtown New York City
+              community.</span
+            >
+          </div>
+          <div class="about__column">
+            <div class="img__wrapper">
+              <img src="https://source.unsplash.com/random/11" />
+            </div>
+            <span
+              >Retail Market Hours: Mon – Sat: Temporarily Closed Sun:
+              Temporarily Closed</span
+            >
+          </div>
+          <div class="about__column">
+            <div class="img__wrapper">
+              <img src="https://source.unsplash.com/random/12" />
+            </div>
+            <span
+              >Food Hall Hours: Mon – Sat: Temporarily Closed Sun: Temporarily
+              Closed</span
+            >
+          </div>
+        </div>
+      </section>
+      <section class="events">
+        <div class="events__header">
+          <span>활력</span>
+          <h4>Market Events</h4>
+          <span>활력</span>
+        </div>
+        <div class="events__list">
+          <div class="events__event">
+            <span>02/07</span>New Balance x Paperboy Paris by Greenhouse @ Canal
+            Street Market
+          </div>
+          <div class="events__event"><span>12/11</span>Hack City 12/11</div>
+          <div class="events__event"><span>07/27</span>Taiwanese Wave</div>
+        </div>
+        <a href="#" class="btn">see all</a>
+      </section>
+      <section class="location">
+        <div class="location__address">
+          <h3>265 Canal St.<span>NEW YORK, NY</span></h3>
+        </div>
+        <div class="location__address"></div>
+      </section>
+      <section class="contact">
+        <h4>Interested in becoming a vendor?</h4>
+        <a href="#" class="btn">click here</a>
+      </section>
+    </main>
+    <nav>
+      <ul>
+        <li><span>Food</span></li>
+        <li><span>Retail</span></li>
+        <li><span>Community</span></li>
+      </ul>
+    </nav>
+  </body>
 </html>
