--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         <div class="location__address">
           <h3>265 Canal St.<span>NEW YORK, NY</span></h3>
         </div>
-        <div class="location__address"></div>
+        <div class="location__address">
+          <h3>301 Canal St.<span>Brooklyn, UK</span></h3>
+        </div>
       </section>
       <section class="contact">
         <h4>Interested in becoming a vendor?</h4>
